--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="assets/css/min/styles.min.css">
         <link rel="shortcut icon" href="assets/favicon/favicon.ico">
-        
+
     </head>
     <body>
         <div id="main-container" class="container">
@@ -28,13 +28,13 @@
                     <div class="header-container">
                         <div class="row header-row">
                             <div class="col-md-8">
-                                <div id="location" class="current">Pittsburgh, PA</div>
-                                <div id="current-date" class="current-small">Thursday, May 23, 2019</div>
-                                <div id="current-time" class="current-small">05:30 PM</div>                            
+                                <div id="location" class="current"></div>
+                                <div id="current-date" class="current-small"></div>
+                                <div id="current-time" class="current-small"></div>
                             </div>
-                            <div class="col-md-4 text-right align-self-center">                            
+                            <div class="col-md-4 text-right align-self-center">
                                     <div class="input-group">
-                                        <input id="weather-input" type="text" class="form-control" placeholder="Search...">
+                                        <input id="weather-input" type="text" class="form-control" placeholder="Search..." value="40.444,-79.953">
                                         <div class="input-group-append">
                                             <span id="search-btn" class="input-group-text">
                                                 <i class="fas fa-search"></i>
@@ -47,9 +47,9 @@
                     <div class="current-container">
                         <div class="row current-row">
                             <div class="col-12 text-center">
-                                <div id="current-temp" class="current">84&deg;</div>
-                                <div id="current-weather" class="current mb-2">Sunny</div>
-                                <div id="current-summary" class="current-small">Rain today through Wednesday, with high temperatures rising to 87°F on Wednesday.</div>         
+                                <div id="current-temp" class="current">--</div>
+                                <div id="current-weather" class="current mb-2"></div>
+                                <div id="current-summary" class="current-small"></div>
                             </div>
                         </div>
                     </div>
@@ -59,18 +59,18 @@
                             <div class="col-12 col-lg">
                                 <div class="card">
                                     <div class="card-body text-center">
-                                        <h5 class="card-title">Today</h5>
+                                        <h5 class="card-title"></h5>
                                         <div class="row high-low-container">
                                             <div class="col-12 icon-container">
-                                                <i class="fas fa-cloud-showers-heavy fa-3x"></i>
+                                                <canvas></canvas>
                                             </div>
                                             <div class="col-6">
                                                 <div>Hi:</div>
-                                                <div>81&deg;</div>
+                                                <div class="hi">--</div>
                                             </div>
                                             <div class="col-6">
                                                 <div>Lo:</div>
-                                                <div>65&deg;</div>
+                                                <div class="lo">--</div>
                                             </div>
                                         </div>
                                     </div>
@@ -79,18 +79,18 @@
                             <div class="col-12 col-lg">
                                 <div class="card">
                                     <div class="card-body text-center">
-                                        <h5 class="card-title">Fri</h5>
+                                        <h5 class="card-title"></h5>
                                         <div class="row high-low-container">
                                             <div class="col-12 icon-container">
-                                                <i class="fas fa-cloud-sun fa-3x"></i>
+                                                <canvas></canvas>
                                             </div>
                                             <div class="col-6">
                                                 <div>Hi:</div>
-                                                <div>76&deg;</div>
+                                                <div class="hi">--</div>
                                             </div>
                                             <div class="col-6">
                                                 <div>Lo:</div>
-                                                <div>55&deg;</div>
+                                                <div class="lo">--</div>
                                             </div>
                                         </div>
                                     </div>
@@ -99,18 +99,18 @@
                             <div class="col-12 col-lg">
                                 <div class="card">
                                     <div class="card-body text-center">
-                                        <h5 class="card-title">Sat</h5>
+                                        <h5 class="card-title"></h5>
                                         <div class="row high-low-container">
                                             <div class="col-12 icon-container">
-                                                <i class="fas fa-cloud-sun fa-3x"></i>
+                                                <canvas></canvas>
                                             </div>
                                             <div class="col-6">
                                                 <div>Hi:</div>
-                                                <div>83&deg;</div>
+                                                <div class="hi">--</div>
                                             </div>
                                             <div class="col-6">
                                                 <div>Lo:</div>
-                                                <div>59&deg;</div>
+                                                <div class="lo">--</div>
                                             </div>
                                         </div>
                                     </div>
@@ -119,18 +119,18 @@
                             <div class="col-12 col-lg">
                                 <div class="card">
                                     <div class="card-body text-center">
-                                        <h5 class="card-title">Sun</h5>
+                                        <h5 class="card-title"></h5>
                                         <div class="row high-low-container">
                                             <div class="col-12 icon-container">
-                                                <i class="fas fa-cloud-showers-heavy fa-3x"></i>
+                                                <canvas></canvas>
                                             </div>
                                             <div class="col-6">
                                                 <div>Hi:</div>
-                                                <div>79&deg;</div>
+                                                <div class="hi">--</div>
                                             </div>
                                             <div class="col-6">
                                                 <div>Lo:</div>
-                                                <div>68&deg;</div>
+                                                <div class="lo">--</div>
                                             </div>
                                         </div>
                                     </div>
@@ -139,29 +139,29 @@
                             <div class="col-12 col-lg">
                                 <div class="card">
                                     <div class="card-body text-center">
-                                        <h5 class="card-title">Mon</h5>
+                                        <h5 class="card-title"></h5>
                                         <div class="row high-low-container">
                                             <div class="col-12 icon-container">
-                                                <i class="fas fa-cloud-sun fa-3x"></i>
+                                                <canvas></canvas>
                                             </div>
                                             <div class="col-6">
                                                 <div>Hi:</div>
-                                                <div>82&deg;</div>
+                                                <div class="hi">--</div>
                                             </div>
                                             <div class="col-6">
                                                 <div>Lo:</div>
-                                                <div>60&deg;</div>
+                                                <div class="lo">--</div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>                                        
-                </div>                
+                    </div>
+                </div>
             </div>
         </div>
-        
+
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -169,6 +169,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/skycons/1396634940/skycons.min.js" integrity="sha256-tZNzlXmrMrO9BLT6Gv4Y0LfAN8HdbZ7+LIuNf6WkFC0=" crossorigin="anonymous"></script>
         <script defer src="assets/js/min/scripts.min.js"></script>
     </body>
 </html>
